# Impala

be/: CMakeLists.txt
be/src/exec/: CMakeLists.txt  aggregation-node.cc  exchange-node.cc  exec-node.cc  pythia-reader-node.cc  pythia-reader-node.h  shm-scan-node.cc  shm-scan-node.h
be/src/pythia/: .tags  Makefile  query.cpp  testfileinttodouble.tmp  testfileinttoint.tmp
be/src/pythia/drivers/: executequery.cpp  test.conf
be/src/pythia/drivers/sample_queries/q1/: query1.conf
be/src/pythia/operators/loaders/: table.cpp
be/src/pythia/unit_tests/: shared-memory-reader.cpp
be/src/runtime/: row-batch.cc  row-batch.h
be/src/service/: impalad-main.cc
be/src/statestore/: simple-scheduler.cc
be/src/util/: debug-util.cc
common/thrift/: ImpalaInternalService.thrift  PlanNodes.thrift
fe/src/main/cup/: sql-parser.y
fe/src/main/java/com/cloudera/impala/analysis/: MagicStmt.java
fe/src/main/java/com/cloudera/impala/planner/: MagicNode.java  Planner.java
fe/src/main/java/com/cloudera/impala/service/: Frontend.java  JniFrontend.java
fe/src/main/jflex/: sql-scanner.flex
fe/src/test/resources/: core-site.xml.bkp  hdfs-site.xml  hive-site.xml.bkp
